[package]
name = "tdn"
version = "0.4.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[workspace]
members = [
    "types",
]

[features]
default = ["std"]
std = ["tdn_types/std"]           # standard : one group       , multiple layers.
single = ["tdn_types/single"]     # signle   : one group       , no Layers.
multiple = ["tdn_types/multiple"] # multiple : multiple groups , no layers.
full = ["tdn_types/full"]         # full     : multiple groups , multiple layers.

[dependencies]
smol = "1.2"
toml = "0.5"
rand = "0.7"
log = "0.4"
httparse = "1.5"
mime = "0.3"
blake3 = "1.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
postcard = { version = "0.7", default-features = false, features = ["alloc"] }
async-tungstenite = { version = "0.14", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tdn_types = { version = "0.4", path = "./types", default-features = false }
chamomile = "0.4"
#chamomile = { path = "../chamomile" }

[dev-dependencies]
#tdn_permission = "0.2"
