[package]
name = "crypto"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Cryptography libraries for TDN."
repository = "https://github.com/cypherlink/crypto"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[dependencies]
