[package]
name = "tdn_crypto"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Cryptography libraries for TDN."
repository = "https://github.com/cypherlink/crypto"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.6"
sha3 = "0.8"
ed25519-dalek = { version="1.0.0-pre.2", features = ["serde"]}
