[package]
name = "tdn_did"
version = "0.7.0"
authors = ["Dev <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "Distributed identity and wallet multiple accounts."
repository = "https://github.com/cympletech/tdn"
keywords = ["did", "tdn", "wallet"]
license = "MIT/Apache-2.0"

[features]
default = ["rand", "secp256k1"]

[dependencies]
anyhow = "1.0"
zeroize = "1.3"
curve25519-dalek = "3"
ed25519-dalek = "1.0"
tdn_types = { version = "0.7", path = "../types", default-features = false }

# mnemonic (BIP-39)
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }

# key deriving (BIP-32, BIP-44)
secp256k1 = { version = "0.21", features = ["recovery"], optional = true }

rand = { version = "0.8", optional = true }

[dev-dependencies]
bs58 = "0.4"
hex = "0.4"
ethsign = "0.8"
