[package]
name = "tdn_did"
version = "0.8.0"
authors = ["Dev <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "Distributed identity and wallet multiple accounts."
repository = "https://github.com/cympletech/tdn"
keywords = ["did", "tdn", "wallet"]
license = "MIT/Apache-2.0"

[features]
default = ["rand_chacha", "secp256k1"]

[dependencies]
anyhow = "1.0"
zeroize = "1.5"

# mnemonic (BIP-39)
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.11", default-features = false }
sha2 = { version = "0.10", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }

# key deriving (BIP-32, BIP-44)
secp256k1 = { version = "0.22", features = ["recovery"], optional = true }

rand_chacha = { version = "0.3", optional = true }

tdn_types = { version = "0.8", path = "../types", default-features = false }

[dependencies.ed25519-dalek]
git = "https://github.com/cympletech/ed25519-dalek"
default-features = false

[dependencies.curve25519-dalek]
git = "https://github.com/cympletech/curve25519-dalek"
default-features = false

[dev-dependencies]
bs58 = "0.4"
hex = "0.4"
ethsign = "0.8"
