[package]
name = "tdn_permission"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN/permission"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"

core = { path = "../core", features = ["dev"] }
