[package]
name = "tdn_rpc"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN/rpc"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
