[package]
name = "tdn"
version = "0.7.0"
authors = ["Dev <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "Trusted Distributed Network. (Also a framework for building blockchain/web3 applications)."
repository = "https://github.com/cympletech/TDN"
keywords = ["distributed", "blockchain", "framework", "web3", "network"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["tdn_types/std"]           # standard : one group       , multiple layers.
single = ["tdn_types/single"]     # single   : one group       , no Layers.
multiple = ["tdn_types/multiple"] # multiple : multiple groups , no layers.
full = ["tdn_types/full"]         # full     : multiple groups , multiple layers.

[dependencies]
chamomile = "0.8"
toml = "0.5"
rand = "0.7"
log = "0.4"
httparse = "1.6"
mime = "0.3"
blake3 = "1.3"
tokio-tungstenite = "0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tdn_types = { version = "0.7", path = "../types", default-features = false }

[dev-dependencies]
#tdn_permission = "0.2"
