[package]
name = "tdn"
version = "0.10.6"
authors = ["Dev <dev@cympletech.com>"]
edition = "2021"
readme = "../README.md"
description = "Trusted Distributed Network. (Also a framework for building blockchain/web3 applications)."
repository = "https://github.com/cympletech/TDN"
keywords = ["distributed", "blockchain", "framework", "web3", "network"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["tdn_types/std"]           # standard : one group       , multiple layers.
single = ["tdn_types/single"]     # single   : one group       , no Layers.
multiple = ["tdn_types/multiple"] # multiple : multiple groups , no layers.
full = ["tdn_types/full"]         # full     : multiple groups , multiple layers.

[dependencies]
blake3 = "1.3"
chamomile = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
httparse = "1.6"
mime = "0.3"
rand_chacha = "0.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
toml = "0.8"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

tdn_types = { version = "0.10", path = "../types", default-features = false }

[dev-dependencies]
#tdn_permission = "0.2"
