[package]
name = "tdn-types"
version = "0.4.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = []      # standard : one group       , multiple layers.
single = []   # signle   : one group       , no Layers.
multiple = [] # multiple : multiple groups , no layers.
full = []     # full     : multiple groups , multiple layers.

[dependencies]
async-channel = "1.5"
lazy_static = "1"
sha3 = "0.9"
dirs = "3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
chamomile-types = { git = "https://github.com/cypherlink/chamomile", branch="main" }
