[package]
name = "tdn_types"
version = "0.5.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = []      # standard : one group       , multiple layers.
single = []   # signle   : one group       , no Layers.
multiple = [] # multiple : multiple groups , no layers.
full = []     # full     : multiple groups , multiple layers.

[dependencies]
sha3 = "0.9"
chamomile_types = "0.5"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
