[package]
name = "tdn_types"
version = "0.10.0"
authors = ["Dev <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "Trusted Distributed Network types."
repository = "https://github.com/cympletech/TDN"
keywords = ["distributed", "blockchain", "web3"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = []      # standard : one group       , multiple layers.
single = []   # signle   : one group       , no Layers.
multiple = [] # multiple : multiple groups , no layers.
full = []     # full     : multiple groups , multiple layers.

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.3"
chamomile_types = "0.10"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
tokio = { version = "1", default-features = false, features = ["sync"] }
