[package]
name = "tdn_gossip"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN/consensus/gossip"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"

core = { path="../../core" }
