[package]
name = "tdn_database"
version = "0.1.0"
authors = ["Contact <contact@cypherlink.io>"]
readme = "README.md"
description = "Trusted Distributed Network. (Another Blockchain infrastructure framework)."
repository = "https://github.com/cypherlink/TDN/storage/keystore"
keywords = ["distributed", "blockchain", "infrastructure", "framework"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
